--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.5",
+    "eslint": "^6.8.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "express": "^4.17.1",
     "nodemon": "^2.0.3",
     "pug": "^2.0.4",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   }
 }
