--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.3",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.3",
     "pug": "^2.0.4",
     "socket.io": "^2.3.0"
